Cleanup: Fixed ailment display spinner buttons hiding text behind them

--- a/ProjectMoonTRPG/ProjectMoonTRPGStyle.css
+++ b/ProjectMoonTRPG/ProjectMoonTRPGStyle.css
@@ -1773,8 +1773,14 @@ background-image: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0)), ur
     left: 25px;
 }
 
-/* This two rules disables the spinner (up and down buttons in number inputs) when not hovering over or selecting an ailment field */
-/* Also work for Firefox! */
+/* This rule disables the spinner (up and down buttons in number inputs) when not hovering over or selecting an ailment field */
+.ailmentNumNextTurn:not(:hover):not(:focus)::-webkit-inner-spin-button,
+.ailmentNumNextTurn:not(:hover):not(:focus)::-webkit-outer-spin-button,
+.ailmentNumThisTurn:not(:hover):not(:focus)::-webkit-inner-spin-button,
+.ailmentNumThisTurn:not(:hover):not(:focus)::-webkit-outer-spin-button {
+    display: none;
+}
+/* This disables the spinner in Firefox! */
 .ailmentNumNextTurn, .ailmentNumThisTurn {
     appearance: textfield;
 }
